fdo#56562 OSX: Update URL in Writer title bar when saving .doc

Change-Id: I839ee3fd76d9c5666dd7f82cba26596c80ff2602